
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dwlab_basicpy"
version = "0.6.45"
description = "DW-Lab Basic Python Services"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Detlef Wolf", email = "detlef.wolf@dw-lab.de" }
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/dtlfwolf/dwlab-basicpy"

#[tool.setuptools]
#packages = { find = {} }

[tool.setuptools.packages.find]
where = ["src"]
